--- a/src/app/components/general/sort/sort.component.html
+++ b/src/app/components/general/sort/sort.component.html
@@ -1,8 +1,13 @@
-<h4 class="sortTitle">Sortieren nach:</h4>
-<select #sortFields name="sortFields" id="sortFields" [(ngModel)]="selectedValue" (change)="selectItem()">
-    <option *ngFor="let field of fields" [ngValue]="field">{{field.name}}</option>
-</select>
-<select #sortAsc name="sortAsc" id="sortAsc" [(ngModel)]="ascending" (change)="selectItem()">
-    <option [ngValue]="true">Aufsteigend</option>
-    <option [ngValue]="false">Absteigend</option>
-</select>
+<div class="sortComp">
+    <div class="sortTitle">
+        <img class="arrowImg" src="{{arrowIcon.path}}" alt="{{arrowIcon.alt}}" loading="lazy">
+        <h4>Sortieren nach</h4>
+    </div>
+    <select #sortFields name="sortFields" id="sortFields" [(ngModel)]="selectedValue" (change)="selectItem()">
+        <option *ngFor="let field of fields" [ngValue]="field">{{field.name}}</option>
+    </select>
+    <select #sortAsc name="sortAsc" id="sortAsc" [(ngModel)]="ascending" (change)="selectItem()">
+        <option [ngValue]="true">Aufsteigend</option>
+        <option [ngValue]="false">Absteigend</option>
+    </select>
+</div>
