--- a/src/app/components/views/home/home.component.html
+++ b/src/app/components/views/home/home.component.html
@@ -6,4 +6,4 @@
     <app-button [onClick]="mailMe" [type]="lt.MAIL" name="Meine E-Mail"></app-button>
 </app-contentbox>
 <!-- app-skills-percent-list -->
-<app-skills-percent name="Skills" [skills]="skills"></app-skills-percent>
+<app-skills-percent name="Meine Skills" [skills]="skills"></app-skills-percent>
