added svg category icons, app-skill-item, and unified styling

--- a/src/app/components/general/contentbox/contentbox.component.html
+++ b/src/app/components/general/contentbox/contentbox.component.html
@@ -12,9 +12,9 @@
         <app-image *ngIf="!isCarousel" [image]="image"></app-image>
     </div>
     
-    <div class="desc">
+    <div *ngIf="subTitle || description" class="desc">
         <h4 *ngIf="subTitle">{{subTitle}}</h4>
-        <p>{{description}}</p>
+        <p *ngIf="description">{{description}}</p>
     </div>
     <div class="bottom">
         <ng-content></ng-content>
