--- a/src/app/components/general/skills/skill-item/skill-item.component.html
+++ b/src/app/components/general/skills/skill-item/skill-item.component.html
@@ -1,1 +1,5 @@
-<p>skill-item works!</p>
+<div [class]="showPercent ? 'percent-'+skill.knowledgepercent+' skill-item' : 'skill-item'">
+    <img class="skill-cat-img" *ngFor="let category of skill.skillcategories" src="{{category.image.path}}" alt="{{category.image.alt}}" loading="lazy">
+    <p *ngIf="!skill.url">{{skillText}}</p>
+    <a *ngIf="skill.url" href="{{skill.url}}" target="_blank">{{skillText}}</a>
+</div>
