--- a/src/app/components/general/skills/skills-percent/skills-percent.component.html
+++ b/src/app/components/general/skills/skills-percent/skills-percent.component.html
@@ -1,12 +1,9 @@
-<h3>{{name}}</h3>
+<h2>{{name}}</h2>
 <div class="filters">
     <app-filter [filters]="filter" filterName="Filter" (filterEmitter)="filterSkillsBy($event)"></app-filter>
     <app-sort [fields]="sortFields" (selectedEmitter)="sortSkillsBy($event)"></app-sort>
 </div>
 <div class="skill-container" *ngFor="let skill of skills | skillsSort:sortValue:sortAsc | skillsFilter:selectedFilter">
-    <div class="percent-{{skill.knowledgepercent}}">
-        <p *ngIf="!skill.url">{{skill.knowledgepercent}}% {{skill.name}}</p>
-        <a *ngIf="skill.url" href="{{skill.url}}"  target="_blank">{{skill.knowledgepercent}}% {{skill.name}}</a>
-    </div>
+    <app-skill-item [skill]="skill" [showPercent]="true"></app-skill-item>
 </div>
 
