--- a/src/app/components/views/home/home.component.scss
+++ b/src/app/components/views/home/home.component.scss
@@ -1,6 +1,9 @@
-@import 'src/scss/variables.scss';
-@import 'src/scss/mixins.scss';
+@import "src/scss/variables.scss";
+@import "src/scss/mixins.scss";
 
 :host {
     @include wrapper;
+    app-button {
+        @include slimpill;
+    }
 }
